--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background-image: linear-gradient(to right, rgb(8, 175, 175) , grey);
+  ;
   background-size: cover;
 }
 
@@ -34,7 +35,7 @@ body,html {
 
 .playing {
   transform: scale(1.1);
-  border-color: #ffc600;
+  border-color: #09ff00;
   box-shadow: 0 0 1rem #ffc600;
 }
 
